# ThesisPetrinet

./: .gitignore  CMakeLists.txt  requirements.txt  run.sh  test.json
division_de_red/: algoritmo.ipynb  algoritmo.py  graficador.py  matriz-pequeña.json  matriz1.json  matriz3.json  matriz4.json  mincov.py  net 4 -5.pflow  utils.py
division_de_red/salida/: PetrinetSE-original  matriz_incidencia_0.json  matriz_incidencia_0_.json  matriz_incidencia_0_9.json  matriz_incidencia_1.json  matriz_incidencia_1_5.json  matriz_incidencia_general.json  mincov_out.json  mincov_out_0_9.json  mincov_out_0_mod.json  mincov_out_1_5.json  mincov_out_1_5_mod.json  result.py
division_de_red/salida2/: matriz_incidencia_1_.json  matriz_incidencia_general.json  mincov_out_0_.json  mincov_out_0_9.json  mincov_out_0_9_mod.json  mincov_out_1_.json  mincov_out_1_mod.json  mincov_out_original.json
include/: AlgorithmMinCov.hpp  Engine.hpp  NodeState.hpp  calc.h
src/: AlgorithmMinCov.cpp  CMakeLists.txt  bootstrap.cpp  calc.cpp  main.cpp  run.cpp
test/: CMakeLists.txt  TestAlgorithmMinCov.cpp  TestReadJSON.cpp  calc_test.cpp  run_test.cpp  unit_tests.cpp
test/petri_nets/: 4.json  omega.json  omega_1.json  omega_4p.json
test/petri_nets/inhib_arc/: arc_inhib.json
